# project_1

./: .gitignore  CMakeLists.txt  README.md  execute  project.cpp  project.h  test.cpp  testing.cpp
.github/: can_messages_pipeline.yaml
.github/workflows/: can_messages_pipeline.yaml  file_io_pipeline.yaml  whole_project.yaml
Can_messages/: CMakelists.txt  fileIO.py  min_signals.json
Can_messages/python_introduction/: Improved_randomfile.txt  RandomFile.txt
app/src/: test.cpp
can_messages/: CMakelists.txt  arg_gard.py  fileIO.py  items.txt  min_signals.json
can_messages/our_informator/: info.py
can_messages/output/include/can_messages/: CAN_min_signals.h  CAN_signals_biglist.h
can_messages/output/src/: min_signals.cpp
file_io/: CMakeLists.txt  execute
file_io/app/src/: file_io_main.cpp
file_io/lib/include/: project.h
file_io/lib/src/: project.cpp
file_io/lib/ut/: gtest.cpp  ut_lib_tests.cpp
ideas/: classes.py  dict_file.py  myfileio.txt
ideas/local_package/: arg_decorator.py
ideas/python_introduction/: CMakeLists.txt  Improved_randomfile.txt  RandomFile.txt  anotherRandomfile.txt  classwork.py  file_io_example.py  first_steps.py  list_dict_example.py
lib/UT/: gtest.cpp
main_component/: CMakeLists.txt
main_component/input/: randomfile.txt
main_component/src/: main.cpp
main_component/tests/: readme.md  test_mc.py
